[project]
name = "secure-banking-api"
version = "0.1.0"
description = "secure banking api"
authors = [
    {name = "Marco Fernstaedt",email = "fernstaedtmarco@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-countries (>=7.6.1,<8.0.0)",
    "django-phonenumber-field (>=8.0.0,<9.0.0)",
    "phonenumbers (>=9.0.0,<10.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-celery-email (>=3.0.0,<4.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

package-mode = false  # Add this line to disable package mode

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
watchfiles = "^1.0.4"
black = "^25.1.0"

